# owo_agent

./: CMakeLists.txt  README.md  app.cpp  app.h  check.cpp  loadConfig.cpp  log.cpp  main.cpp  openai.cpp  saveConfig.cpp
